# utklearn

./: CMakeLists.txt  README.md
header/: utklearn.hpp
src/: absolute_error.cpp  function_implementation.cpp  train_test_split.cpp
